added map.html, some basic html edits to other files

--- a/views/about.html
+++ b/views/about.html
@@ -1,2 +1,4 @@
-<h1>Busr Route</h1>
+<h1>Busr: Your Transit Adaptor, Transitor</h1>
+
+Busr is a start-up project of Enneagineering.  This app will be on the web using Node.js and MongoDB; on iOS as an app for iPhone/Pod/Pad; and on Android.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a>
 
