--- a/views/layout.html
+++ b/views/layout.html
@@ -33,7 +33,7 @@
           <a class="brand" href="/">Busr</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="/agencies">Agencies</a></li>
+              <li class="active"><a href="/map">Transit Map</a></li>
               <li><a href="/about">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
