--- a/views/map.html
+++ b/views/map.html
@@ -6,7 +6,7 @@
         height: 100%;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&key=AIzaSyCH2QjcDE4DAc65tLh02rhDc18TTlMthb4"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyCH2QjcDE4DAc65tLh02rhDc18TTlMthb4&sensor=false"></script>
     <script>
 var map;
 function initialize() {
