--- a/views/layout.html
+++ b/views/layout.html
@@ -34,7 +34,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li ><a href="/map">Transit Map</a></li>
-              <li ><a href="/map">Agencies</a></li>
+              <li ><a href="/agencies">Agencies</a></li>
               <li><a href="/about">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
