--- a/views/layout.html
+++ b/views/layout.html
@@ -35,7 +35,7 @@
             <ul class="nav">
               <li ><a href="/map">Transit Map</a></li>
               <li ><a href="/agencies">Agency</a></li>
-               <li ><a href="/route">Routes</a></li>
+               <li ><a href="/routes">Routes</a></li>
               <li><a href="/about">About</a></li>
             </ul>
           </div><!--/.nav-collapse -->
