--- a/views/layout.html
+++ b/views/layout.html
@@ -49,8 +49,8 @@
 
     </div> <!-- /container -->
 
-    <script src="../public/js/jquery-2.0.2.min.js"></script>
-	 <script src="../routes.js"></script>
+    <script src="public/js/jquery-2.0.2.min.js"></script>
+	
 
   </body>
 </html>
