routes url taken out of view

--- a/views/routes.html
+++ b/views/routes.html
@@ -14,9 +14,9 @@
 
 {{#each routes}}
 <p>
-<a href="/route/{{id}}">{{longName}}</a><br/>
+<a href="/route/{{id}}">{{id}} : {{longName}}</a><br/>
 
-URL: {{url}}<br />
+
 </p>
 {{/each}}
 
