--- a/views/stops.html
+++ b/views/stops.html
@@ -1,2 +1,11 @@
-<h1>{{stops.id}}</h1>
-dsafadf
+<h1>Stops</h1>
+
+{{#each stops}}
+<p>
+<a href="/stop/{{id}}">{{id}} : {{long}} {{lat}}</a><br/>
+
+
+</p>
+{{/each}}
+
+
