--- a/views/map.html
+++ b/views/map.html
@@ -1,5 +1,48 @@
+<style type="text/css">
+      
+      #map-canvas { height: 100% ; margin: 0; padding: 0; width: 100%; }
+    </style>
+	
+    <!-- <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADZBLErUTwzfbch3Xou5_Nz5R956iH7n4&sensor=false">
+    </script> -->
+	<!-- 	
+		<script>
+		document.write([
+		  '<script src="http://maps.googleapis.com/maps?file=api&amp;v=2&amp;key=', {
+		    'domain1.com': 'apikey1',
+		    'domain2.com': 'apikey2',
+		    'domain3.com': 'apikey3',
+		    'domainN.com': 'apikeyN'
+		  }[window.location.host],
+		  '" type="text/javascript"><\/script>'
+		].join(''));
+		</script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+       <script>
+   var map;
+   function initialize() {
+     var mapOptions = {
+       zoom: 8,
+       center: new google.maps.LatLng(-34.397, 150.644),
+       mapTypeId: google.maps.MapTypeId.ROADMAP
+     };
+     map = new google.maps.Map(document.getElementById('map-canvas'),
+         mapOptions);
+   }
 
+   google.maps.event.addDomListener(window, 'load', initialize);
 
+       </script>
+
+    <div id="map-canvas" style="border-style:solid;
+border-width:5px; min-height: 400px; min-width: 100px;"></div>
+
+  
+  
+  
+  
+<!-- 
     <link rel="stylesheet" href="http://ol3js.org/en/master/build/ol.css" type="text/css">
     <style>
       .map {
@@ -9,7 +52,7 @@
     </style>
     <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
  
-
+	
     <h2>My Map</h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
@@ -27,4 +70,4 @@
       });
     </script>
 
-
+-->
