--- a/views/route.html
+++ b/views/route.html
@@ -9,6 +9,37 @@
 "agencyId":MTA NYCT,
 "url":http://www.mta.info/nyct/bus/schedule/bronx/bx010cur.pdf},
 -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+
+<link rel="stylesheet" href="http://ol3js.org/en/master/build/ol.css" type="text/css">
+<style>
+  .map {
+    height: 400px;
+    width: 100%;
+  }
+</style>
+<script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
+
+<style>
+  #map {
+    position: relative;
+  }
+  #popup {
+    padding-bottom: 45px;
+  }
+</style>
+
+
+
+<div id="map" class="map">
+<div id="popup"></div>
+</div>
+			
+<script src="/js/icon.js" type="text/javascript"></script>
+
+
+
 <h1>{{route.id}}</h1>
 Route description: {{route.description}}
 
@@ -33,8 +64,10 @@ Route description: {{route.description}}
 </p>
 {{/each}}
 
-<!-- 
-          $stops_file_text += "{\"id\":\""+stop_id+"\"," "\"lon\":\""+stop_lon.to_s+"\","  "\"lat\":\""+stop_lat.to_s+"\"," \
-          "\"direction\":\""+stop_direction+"\"," "\"name\":\""+stop_name+"\"," "\"code\":\""+stop_code+"\"," "\"routes\":\""+$routes+"\"},"
 
->
+
+
+
+
+
+
