--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,128 @@
 <h1>Busr Transitor</h1>
-
+<!-- 
 {{#each entries}}
 <p>
 <a href="/article/{{id}}">{{title}}</a><br/>
 Published: {{published}}
 </p>
 {{/each}}
+-->
+
+<style type="text/css">
+      
+      #map-canvas { height: 100% ; margin: 0; padding: 0; width: 100%; }
+    </style>
+	
+    <!-- <script type="text/javascript"
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADZBLErUTwzfbch3Xou5_Nz5R956iH7n4&sensor=false">
+    </script> -->
+	<!-- 	
+		<script>
+		document.write([
+		  '<script src="http://maps.googleapis.com/maps?file=api&amp;v=2&amp;key=', {
+		    'domain1.com': 'apikey1',
+		    'domain2.com': 'apikey2',
+		    'domain3.com': 'apikey3',
+		    'domainN.com': 'apikeyN'
+		  }[window.location.host],
+		  '" type="text/javascript"><\/script>'
+		].join(''));
+		</script> -->
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
+       
+	<script>
+	function initialize() {
+	  var myLatlng = new google.maps.LatLng(40.6700, -73.9400);
+	  var mapOptions = {
+	    zoom: 10,
+	    center: myLatlng,
+	    mapTypeId: google.maps.MapTypeId.ROADMAP
+	  };
+
+	  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+	  
+	 var transitLayer = new google.maps.TransitLayer();
+	  transitLayer.setMap(map);	 
+	  
+	  var image = 'bus_stop_icon.png';
+	  
+
+	  var contentString = '<div id="content">'+
+	      '<div id="siteNotice">'+
+	      '</div>'+
+	      '<h1 id="firstHeading" class="firstHeading">MTA (New York)</h1>'+
+	      '<div id="bodyContent">'+
+	      '<p><b>MTA</b> the MTA has the responsibility for developing and implementing a unified mass transportation policy for the New York metropolitan' + 'area, including all five boroughs of New York City and the suburban counties of Dutchess, Nassau, Orange, Putnam, Rockland, Suffolk and' + 'Westchester, all of which together are the "Metropolitan Commuter Transportation District (MCTD)". Thomas F. Prendergast is currently the' + 'Chairman & CEO of the MTA. Nuria Fernandez is currently the MTA\'s Chief Operating Officer (COO).</p>'+
+	
+		  '<P>The MTA is the largest regional public transportation provider in the Western Hemisphere. Its agencies serve a region of'+ 'approximately 14.6 million people spread over 5,000 square miles (13,000 km²) in 12 New York Counties and two in Connecticut. MTA agencies now' + 
+		  'move more than 8.5 million customers per day (2.6 billion rail and bus customers a year) and employ approximately 65,000 workers.</p>' +
+	      '<p>Agency Web, <a href="http://www.mta.info">'+
+	      'mta.info</a> '+
+	      '</p>'+
+	      '</div>'+
+	      '</div>';
+		  
+		  
+
+	
+		  
+
+	  var infowindow = new google.maps.InfoWindow({
+	      content: contentString
+	  });
+
+	  var marker = new google.maps.Marker({
+	      position: myLatlng,
+	      map: map,
+	      title: 'Uluru (Ayers Rock)',
+		  icon: image
+	  });
+	  google.maps.event.addListener(marker, 'click', function() {
+	    infowindow.open(map,marker);
+	  });
+	}
+
+	google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
+<h3>Transit Adaptor (transitor) - Find Smart Routes in Transit (Coming Soon!)</h3>
+Features: Smart Route Finding, Real Time Rider-to-Rider Feedback/Messaging, Commuter Alarm Clock<br />
+Platforms: Web (Node.js/HTML5), iOS and Android<br /><br />
+
+    <div id="map-canvas" style="border-style:solid;
+border-width:5px; min-height: 400px; min-width: 100px;"></div>
+
+  
+
+  
+  
+<!-- 
+    <link rel="stylesheet" href="http://ol3js.org/en/master/build/ol.css" type="text/css">
+    <style>
+      .map {
+        height: 400px;
+        width: 100%;
+      }
+    </style>
+    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
+ 
+	
+    <h2>My Map</h2>
+    <div id="map" class="map"></div>
+    <script type="text/javascript">
+      var map = new ol.Map({
+        target: 'map',
+        layers: [
+          new ol.layer.Tile({
+            source: new ol.source.MapQuestOpenAerial()
+          })
+        ],
+        view: new ol.View2D({
+          center: ol.proj.transform([37.41, 8.82], 'EPSG:4326', 'EPSG:3857'),
+          zoom: 4
+        })
+      });
+    </script>
+
+-->
