--- a/views/stop.html
+++ b/views/stop.html
@@ -206,7 +206,7 @@ $(document).ready(function(){
 										var PresentableDistance = Extensions.PresentableDistance;
 										var StopsFromCall = Extensions.StopsFromCall;
 							            $("#siri").append(
-									        "<div>" + "<b>Next Bus Distance Away:</b> " + DistanceFromCall + " ( " + PresentableDistance +   ") "  + " Stops Away: " +StopsFromCall + "</div>" 
+									        "<div> <b>Next Bus Distance Away:</b> " + DistanceFromCall + " ( " + PresentableDistance +   ") "  + " Stops Away: " +StopsFromCall + " Line: "+lineRef +"</div>" 
 											
 
 									    );
