updated domain in package, copy edits

--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,42 @@
 <h1>Busr: Your Transit Adaptor, Transitor</h1>
 
-Busr is a start-up project of Enneagineering.  This app will be on the web using Node.js and MongoDB; on iOS as an app for iPhone/Pod/Pad; and on Android.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a>
+Busr is a start-up project of Enneagineering.  This app will be on the web using Node.js (Express Framework) and Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
+
+<br /><br />
+
+<b>Competitors:</b><br /> 
+
+NYC specific:<br />
+<ul>
+ <li><a href="http://web.mta.info/apps/">http://web.mta.info/apps/</a></li>
+</ul>
+<br />
+
+Universal Transit App competition:<br />
+<ul>
+	<li><a href="http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832">http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832</a></li>
+	<li><a href="http://www.moovitapp.com/">http://www.moovitapp.com/</a></li>
+	<li><a href="http://thetransitapp.com/">http://thetransitapp.com/</a></li>
+				
+</ul>
+	
+	
+<h3>Implications of Big Data Analysis of Traffic Inputs</h3>
+
+<ul>
+	<li><a href="http://www.informationweek.com/big-data/news/big-data-analytics/dublin-points-big-data-tech-at-traffic-j/240155213">Dublin Traffic Monitoring System</a></li>
+	
+	<li><a href="http://www.intel.com/content/dam/www/public/us/en/documents/case-studies/big-data-xeon-e5-trustway-case-study.pdf">Intel Big Data Traffic Analysis</a></li>
+	
+	<li><a href="http://www.cs.uic.edu/~urbcomp2013/papers/Paper%2015_Tostes.pdf">City Wide Traffic Flow Analysis</a></li>
+</ul>
+
+<h3>Applications</h3>
+<ul>
+	<li>Consumer Facing Transit Info</li>
+	<li>Smart Navigation Systems</li>
+	<li>Self Driving Transportation Modules (Modular transportations systems)</li>
+</ul>
+	
+	
 
