--- a/views/agencies.html
+++ b/views/agencies.html
@@ -2,4 +2,32 @@
 
 This section is not yet implemented. Here you will be able to select from multiple Transit Agencies to view route information for each agency.  Currently only NYC MTA data is being used to prototype the app.  Soon multiple transit agencies will be available not just NYC MTA.  
 <p/>
+<br />
+<b>Initial Cities List:</b> (% of pop using transit for commuting)<br />
+1. New York, New York - 55.66% <br />
+2. Jersey City, New Jersey - 45.82% <br />
+3. Washington, D.C. - 38.30% <br />
+4. San Francisco, California - 34.05%<br />
+5. Boston, Massachusetts - 32.82%<br />
+6. Arlington, Virginia - 28.54%<br />
+7. Philadelphia, Pennsylvania - 27.19%<br />
+8. Cambridge, Massachusetts - 26.60%<br />
+9. Newark, New Jersey - 26.50%<br />
+10. <a href="http://www.transitchicago.com/developers/bustracker.aspx">Chicago, Illinois - 26.50%</a><br />
+11. Yonkers, New York - 24.95%<br />
+12. Daly City, California - 21.45%<br />
+13. Hartford, Connecticut - 21.19%<br />
+14. Alexandria, Virginia - 21.12%<br />
+15. Seattle, Washington - 18.19%<br />
+16. Pittsburgh, Pennsylvania - 18.03%<br />
+17. Baltimore, Maryland - 17.64%<br />
+18. Berkeley, California - 17.36%<br />
+19. Oakland, California - 17.21%<br />
+20. Minneapolis, Minnesota - 15.18%<br />
+21. East Los Angeles, California - 14.85%<br />
+<br /><br />
+
+Any transit agency with public data could be added to the app, including Internationally.  See List: <a href="https://code.google.com/p/googletransitdatafeed/wiki/PublicFeeds">https://code.google.com/p/googletransitdatafeed/wiki/PublicFeeds</a>
+
+
 
