--- a/views/route.html
+++ b/views/route.html
@@ -19,7 +19,7 @@ Route description: {{route.description}}
 
 		
 	  
-	  
+	/*  
 	  var styles = [
 	    {
 	      stylers: [
@@ -41,7 +41,7 @@ Route description: {{route.description}}
 	      ]
 	    }
 	  ];
-	  
+	  */
 
       
 	  //var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
@@ -82,8 +82,8 @@ Route description: {{route.description}}
    	  var mapOptions = {
    	    zoom: 14,
    	    center: myLatlng,
-   	    mapTypeId: google.maps.MapTypeId.ROADMAP,
-   		styles: styles
+   	    mapTypeId: google.maps.MapTypeId.ROADMAP
+   		//styles: styles
    	  };
 		 var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 		 
