--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <title>busr: transit adaptor</title>
 
@@ -16,8 +16,7 @@
     <!-- Custom styles for this template -->
     <link href="/bootstrap/css/navbar-fixed-top.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,7 +37,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Busr</a>
+          <a class="navbar-brand" style="min-width: 100px !important;" href="/"><img src="/bus_stop_icon.png"  style="float: left; height: 40px; text-align: left;  vertical-align: middle;" >&nbsp;<span style="font-weight: 900;  vertical-align: middle;" >Busr</span></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
