--- a/views/about.html
+++ b/views/about.html
@@ -1,48 +1,53 @@
-<h1>Busr: Your Transit Adaptor, Transitor</h1>
+<h2>Busr Transitor: Your Transit Adaptor</h2>
 
-Busr is a start-up project of Enneagineering.  This app will be on the web using Node.js (Express Framework) and Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
+Busr is a start-up project of Enneagineering that has a front end consumer facing transit information provider with transit tools to ease public transit and general commuting problems. Behind the scenes it provides a means for profiling traffic and urban environments to find efficient pathways for way finding that has larger commercial applications.  This app will be on the web using Node.js/HTML5/Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  It incorporates programming in Javascript, Ruby, Python, Java, Objective-C and C++ languages.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
 
 <br /><br />
 
-<b>Competitors:</b><br /> 
-
-NYC specific:<br />
-<ul>
- <li><a href="http://web.mta.info/apps/">http://web.mta.info/apps/</a></li>
-</ul>
-<br />
+<h3>Competitors:</h3><br /> 
 
 Universal Transit App competition:<br />
 <ul>
-	<li><a href="http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832">http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832</a></li>
+<!-- 	<li><a href="http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832">http://www.kickstarter.com/projects/228865951/transit-app-for-ios-6-and-beyond/posts/364832</a></li>
+	-->
 	<li><a href="http://www.moovitapp.com/">http://www.moovitapp.com/</a></li>
 	<li><a href="http://thetransitapp.com/">http://thetransitapp.com/</a></li>
+</ul>
+		NYC specific:<br />
+		<ul>
+		 <li><a href="http://web.mta.info/apps/">http://web.mta.info/apps/</a></li>
+
 				
 </ul>
 	
 	
-	
-<h3>Implications of Big Data Analysis of Traffic Inputs</h3>
+<h3>Implications of Big Data Analysis on Traffic Flow</h3>
 
 <ul>
+	
+	<li><a href="http://en.wikipedia.org/wiki/Traffic_flow">Traffic Flow Generalization</a></li>
+	
 	<li><a href="http://www.informationweek.com/big-data/news/big-data-analytics/dublin-points-big-data-tech-at-traffic-j/240155213">Dublin Traffic Monitoring System</a></li>
 	
 	<li><a href="http://www.intel.com/content/dam/www/public/us/en/documents/case-studies/big-data-xeon-e5-trustway-case-study.pdf">Intel Big Data Traffic Analysis</a></li>
 	
 	<li><a href="http://www.cs.uic.edu/~urbcomp2013/papers/Paper%2015_Tostes.pdf">City Wide Traffic Flow Analysis</a></li>
+	
+	<li><a href="http://users.ece.cmu.edu/~sazimi/SAE2011.pdf">Collision Avoidance at Intersections</a></li>
 </ul>
 
-<h3>Applications</h3>
+<h3>Applications with ROI</h3>
 <ul>
-	<li>Consumer Facing Transit Info</li>
-	<li>Smart Navigation Systems</li>
+	<li>Consumer Facing Transit Info and Tools (busr.info)</li>
+	<li>Smart Navigation Systems </li>
 	<li>Self Driving Transportation Modules (Modular transportations systems)</li>
 </ul>
 
 
 <h3>Tech Tools for Urban Traffic Modeling and Analysis:</h3>
 <ul>
-	<li><a href="http://sumo-sim.org/">SUMO</a></li>
+	<li><a href="http://sumo-sim.org/">Simulation of Urban Mobility (SUMO)</a></li>
+	<li><a href="https://github.com/openplans/OpenTripPlanner/wiki">Open Trip Planner</a>
 </ul>	
 	
 
