--- a/views/layout.html
+++ b/views/layout.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <meta name="author" content="michael mccarron (m.j.h.mccarron@gmail.com), enneagineering.com">
+    <link rel="shortcut icon" href="favicon.ico">
 
     <title>busr: transit adaptor</title>
 
@@ -42,7 +42,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
          
-            <li class="active"><a href="/about">About</a></li>
+            <li><a href="/about">About</a></li>
             <li><a href="/routes">Routes</a></li>
             <li class="dropdown">
               <a href="/agencies" class="dropdown-toggle" data-toggle="dropdown">Agencies <b class="caret"></b></a>
