--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,6 @@
 <h2>Busr Transitor: Your Transit Adaptor</h2>
 
-Busr is a start-up project of Enneagineering that has a front end consumer facing transit information provider with transit tools to ease public transit and general commuting problems. Behind the scenes it provides a means for profiling traffic and urban environments to find efficient pathways for way finding that has larger commercial applications.  This app will be on the web using Node.js/HTML5/Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  It incorporates programming in Javascript, Ruby, Python, Java, Objective-C and C++ languages.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
+Busr is a start-up project of Enneagineering that has a front end consumer facing transit information service with transit tools to ease public transit and general commuting problems. Behind the scenes it provides a means for profiling traffic and urban environments to find efficient pathways for way finding that has larger commercial applications.  This app will be on the web using Node.js/HTML5/Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  It incorporates programming in Javascript, Ruby, Python, Java, Objective-C and C++ languages.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
 
 <br /><br />
 
