--- a/views/index.html
+++ b/views/index.html
@@ -8,122 +8,88 @@ Published: {{published}}
 {{/each}}
 -->
 
+
+
 <style type="text/css">
-      
-      #map-canvas { height: 100% ; margin: 0; padding: 0; width: 100%; }
-    </style>
-	
-    <!-- <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyADZBLErUTwzfbch3Xou5_Nz5R956iH7n4&sensor=false">
-    </script> -->
-	<!-- 	
-		<script>
-		document.write([
-		  '<script src="http://maps.googleapis.com/maps?file=api&amp;v=2&amp;key=', {
-		    'domain1.com': 'apikey1',
-		    'domain2.com': 'apikey2',
-		    'domain3.com': 'apikey3',
-		    'domainN.com': 'apikeyN'
-		  }[window.location.host],
-		  '" type="text/javascript"><\/script>'
-		].join(''));
-		</script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-       
-	<script>
-	function initialize() {
-	  var myLatlng = new google.maps.LatLng(40.6700, -73.9400);
-	  var mapOptions = {
-	    zoom: 10,
-	    center: myLatlng,
-	    mapTypeId: google.maps.MapTypeId.ROADMAP
-	  };
+.item {
+    color: #666;
+    background: #fff;
+    height: 400px; 
+	border: solid 2px;
+    /* line-height: 300px; */ /* Align the text vertically center. */
+    font-size: 12px;
+    text-align: left;    
+    font-family: "trebuchet ms", sans-serif; 
+	margin-right: 10%;
+	margin-left: 10%;   
+}
+.carousel{
+    margin-top: 20px;
+}
+.carousel-control{
+	/* top: 50%; */
+	background: #000;
+	width: 10%;
+}
+.bs-example{
+	margin: 20px;
+}
+</style>
 
-	  var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
-	  
-	 var transitLayer = new google.maps.TransitLayer();
-	  transitLayer.setMap(map);	 
-	  
-	  var image = 'bus_stop_icon.png';
-	  
 
-	  var contentString = '<div id="content">'+
-	      '<div id="siteNotice">'+
-	      '</div>'+
-	      '<h1 id="firstHeading" class="firstHeading">MTA (New York)</h1>'+
-	      '<div id="bodyContent">'+
-	      '<p><b>MTA</b> the MTA has the responsibility for developing and implementing a unified mass transportation policy for the New York metropolitan' + 'area, including all five boroughs of New York City and the suburban counties of Dutchess, Nassau, Orange, Putnam, Rockland, Suffolk and' + 'Westchester, all of which together are the "Metropolitan Commuter Transportation District (MCTD)". Thomas F. Prendergast is currently the' + 'Chairman & CEO of the MTA. Nuria Fernandez is currently the MTA\'s Chief Operating Officer (COO).</p>'+
-	
-		  '<P>The MTA is the largest regional public transportation provider in the Western Hemisphere. Its agencies serve a region of'+ 'approximately 14.6 million people spread over 5,000 square miles (13,000 km²) in 12 New York Counties and two in Connecticut. MTA agencies now' + 
-		  'move more than 8.5 million customers per day (2.6 billion rail and bus customers a year) and employ approximately 65,000 workers.</p>' +
-	      '<p>Agency Web, <a href="http://www.mta.info">'+
-	      'mta.info</a> '+
-	      '</p>'+
-	      '</div>'+
-	      '</div>';
-		  
-		  
+
+
+
 
 	
-		  
+	
 
-	  var infowindow = new google.maps.InfoWindow({
-	      content: contentString
-	  });
+<div class="bs-example">
+    <div id="myCarousel" class="carousel slide">
+    	<!-- Carousel indicators -->
+        <ol class="carousel-indicators" style="color: #000 !important; background: #000 !important;" >
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>   
+        <!-- Carousel items -->
+        <div class="carousel-inner">
+            <div class="active item">
+				<img src="/images/traffic_jam.png" style="width: 240px; padding: 4px; float: left;" title="traffic problems"><h3>Commuting Problems</h3> 80% of the population of New York Metro area commutes regularly each day using public transit.  Causing bottlenecks, delays and confusion in commuting. With very little intelligent tools to address issues of making commuting easier. 
+			</div>
+            
+			<div class="item">
+			    <img src="/images/screenshot.png" style="width: 300px; padding: 4px; float: left; text-align: center;" title="traffic flow analysis"> 
+				<img src="/images/TrafficBottlenecks.png" style="width: 300px; padding: 4px; float: left; text-align: center;" title="traffic flow analysis"> 
+				
+				<h3>Analytics</h3> Traffic Flow analysis provides intelligent way finding in the white noise of transportation big data.  Through using tools such as SUMO and Open Trip Planner and other methods smart decisions about way finding can be made. 
+			</div>
+            
+			<div class="item">
+			    <img src="/images/ios1.png" style="width: 220px; padding: 4px; float: left;" title="way finding"><h3>Solutions</h3> Busr App allows to integrate real-time data from multiple sources to update transportation information on the fly. Available on Web, iOS and Android. 
+			
+			</div>
+			
 
-	  var marker = new google.maps.Marker({
-	      position: myLatlng,
-	      map: map,
-	      title: 'Uluru (Ayers Rock)',
-		  icon: image
-	  });
-	  google.maps.event.addListener(marker, 'click', function() {
-	    infowindow.open(map,marker);
-	  });
-	}
+			
+			
+        </div>
+        <!-- Carousel nav -->
+        <a class="carousel-control left" href="#myCarousel" data-slide="prev">‹</a>
+        <a class="carousel-control right" href="#myCarousel" data-slide="next">›</a>
+    </div>
+</div>
 
-	google.maps.event.addDomListener(window, 'load', initialize);
 
-</script>
 
 <h3>Transit Adaptor (transitor) - Find Smart Routes in Transit (Coming Soon!)</h3>
 <b>Features:</b> Smart Route Finding, Real Time Rider-to-Rider Feedback/Messaging, Commuter Alarm Clock<br />
 <b>Platforms:</b> Web (Node.js/HTML5), iOS and Android<br />
 <b>API:</b> Busr consumes non-standardized feeds which vary from agency to agency and standardized <a href="https://developers.google.com/transit/gtfs/">GTFS Feeds</a> and then presents all feeds in a uniform GTFS based API and for real-time data in <a href="https://developers.google.com/transit/gtfs-realtime/">GTFS-Realtime</a> to ease transit app development.  
 
-    <div id="map-canvas" style="border-style:solid;
-border-width:5px; min-height: 400px; min-width: 100px;"></div>
 
   
 
-  
-  
-<!-- 
-    <link rel="stylesheet" href="http://ol3js.org/en/master/build/ol.css" type="text/css">
-    <style>
-      .map {
-        height: 400px;
-        width: 100%;
-      }
-    </style>
-    <script src="http://ol3js.org/en/master/build/ol.js" type="text/javascript"></script>
- 
-	
-    <h2>My Map</h2>
-    <div id="map" class="map"></div>
-    <script type="text/javascript">
-      var map = new ol.Map({
-        target: 'map',
-        layers: [
-          new ol.layer.Tile({
-            source: new ol.source.MapQuestOpenAerial()
-          })
-        ],
-        view: new ol.View2D({
-          center: ol.proj.transform([37.41, 8.82], 'EPSG:4326', 'EPSG:3857'),
-          zoom: 4
-        })
-      });
-    </script>
 
--->
+
+
