--- a/views/agencies.html
+++ b/views/agencies.html
@@ -1,6 +1,6 @@
-<h1>Agencies</h1>
+<h2>Agencies</h2>
 
-This section is not yet implemented. Here you will be able to select from multiple Transit Agencies to view route information for each agency.  Currently only NYC MTA data is being used to prototype the app.  Soon multiple transit agencies will be available not just NYC MTA.  
+This section is not yet implemented. Here you will be able to select from multiple Transit Agencies to view route information for each agency.  Currently only NYC MTA data is being used to prototype the app.  Soon multiple transit agencies will be available not just NYC MTA. Initial release should include NYC, Chicago and Los Angeles transit systems.  
 <p/>
 <br />
 <b>Initial Cities List:</b> (% of pop using transit for commuting)<br />
