--- a/views/map.html
+++ b/views/map.html
@@ -131,26 +131,6 @@
 	}
 	
 	
-/* 
-  var marker = new google.maps.Marker({
-      position: myLatlng,
-      map: map,
-      title: 'MTA',
-	  icon: image
-  });
-  google.maps.event.addListener(marker, 'click', function() {
-    infowindow.open(map,marker);
-  });
-}
-  */
-  
-	
-	
-	
-	
-	
-	
-	
 
 	google.maps.event.addDomListener(window, 'load', initialize);
 
@@ -161,7 +141,7 @@
 </script>
 
 
-<h1>MTA (New York) Transit Map</h1>
+<h2>Transit Map</h2>
     <div id="map-canvas" style="border-style:solid;
 border-width:5px; min-height: 400px; min-width: 100px;"></div>
 
