--- a/views/layout.html
+++ b/views/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="michael mccarron (m.j.h.mccarron@gmail.com), enneagineering.com">
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 
     <title>busr: transit adaptor</title>
 
@@ -25,11 +25,11 @@
     <![endif]-->
   </head>
 
-  <body>
+  <body style="background-image:url('/images/bus_background.png'); background-repeat:no-repeat;">
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
+      <div class="container" >
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
             <span class="sr-only">Toggle navigation</span>
@@ -47,7 +47,7 @@
             <li class="dropdown">
               <a href="/agencies" class="dropdown-toggle" data-toggle="dropdown">Agencies <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">NYC MTA</a></li>
+                <li><a href="/agencies">NYC MTA</a></li>
               
                 <li class="divider"></li>
                 <li class="dropdown-header">Coming Soon</li>
@@ -67,7 +67,7 @@
     <div class="container">
 
       <!-- Main component for a primary marketing message or call to action -->
-      <div class="jumbotron">
+      <div class="jumbotron" style="opacity:0.95;">
 
     	{{{body}}}
 
