adding poster class to main controller

--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,4 @@
-<h2>Busr Transitor: Your Transit Adaptor</h2>
+<h2>Busr: Smart Way Finding</h2>
 
 Busr is a start-up project of Enneagineering that has a front end consumer facing transit information service with transit tools to ease public transit and general commuting problems. Behind the scenes it provides a means for profiling traffic and urban environments to find efficient pathways for way finding that has larger commercial applications.  This app will be on the web using Node.js/HTML5/Redis; on iOS as an app for iPhone/Pod/Pad; and on Android.  It incorporates programming in Javascript, Ruby, Python, Java, Objective-C and C++ languages.  For more info contact: <a href="m.j.h.mccarron@gmail.com">Mikey McCarron</a> 415-323-3648
 
@@ -21,11 +21,21 @@ Universal Transit App competition:<br />
 </ul>
 	
 	
-<h3>Implications of Big Data Analysis on Traffic Flow</h3>
+<h3>Research: Big Data Analysis on Traffic Flow</h3>
 
 <ul>
+	<li><a href="http://en.wikibooks.org/wiki/Fundamentals_of_Transportation">Fundamentals of Transportation </a>[wikibook:read start:<a href="http://en.wikibooks.org/wiki/Fundamentals_of_Transportation/Traffic_Flow">trafficFlow</a>]</li>
 	
 	<li><a href="http://en.wikipedia.org/wiki/Traffic_flow">Traffic Flow Generalization</a></li>
+	
+	<li><a href="http://www.springer.com/physics/complexity/book/978-3-642-32459-8">Modeling Traffic Flow [BOOK]</a></li>
+	
+	<li><a href="http://www.thp.uni-koeln.de/~as/Mypage/traffic.html">Cellular Automata Traffic Flow Modeling</a></li>
+	
+	<li><a href="http://www.ce.berkeley.edu/~daganzo/PAPER.PDF">Traffic Flow Modeling and it's Applications</a></li>
+	
+	<li><a href="http://link.springer.com/chapter/10.1007%2F978-3-642-21219-2_12#page-1">AI in Traffic Flow</a></li>
+	
 	
 	<li><a href="http://www.informationweek.com/big-data/news/big-data-analytics/dublin-points-big-data-tech-at-traffic-j/240155213">Dublin Traffic Monitoring System</a></li>
 	
@@ -34,6 +44,9 @@ Universal Transit App competition:<br />
 	<li><a href="http://www.cs.uic.edu/~urbcomp2013/papers/Paper%2015_Tostes.pdf">City Wide Traffic Flow Analysis</a></li>
 	
 	<li><a href="http://users.ece.cmu.edu/~sazimi/SAE2011.pdf">Collision Avoidance at Intersections</a></li>
+	
+	<li><a href="http://corporate.ford.com/microsites/sustainability-report-2012-13/financial-mobility">Ford's Mobility Project</a></li>
+	
 </ul>
 
 <h3>Applications with ROI</h3>
@@ -48,6 +61,23 @@ Universal Transit App competition:<br />
 <ul>
 	<li><a href="http://sumo-sim.org/">Simulation of Urban Mobility (SUMO)</a></li>
 	<li><a href="https://github.com/openplans/OpenTripPlanner/wiki">Open Trip Planner</a>
+	<li><a href="https://github.com/openxc/openxc-message-format">Accessing Vehicle Data</a></li>
 </ul>	
+
+<h3>Autonomous Automobiles</h3>
+<ul>
+	<li><a href="http://en.wikipedia.org/wiki/Autonomous_car">Autonomous Vehicles Introduction</a>
+	<li><a href="http://www.driverless-future.com/">Driverless Futures</a></li>
+	<li><a href="https://www.facebook.com/pages/Alliance-Automotive/181557428540918">Alliance Automotive</a></li>
+	
+	
+	
+</ul>
+
+<h3>General Transit Research</h3>
+<ul>
+	<li><a href="http://en.wikipedia.org/wiki/Automatic_vehicle_location">Automatic Vehicle Location</a></li>
+	
+</ul>
 	
 
