--- a/views/stop.html
+++ b/views/stop.html
@@ -67,7 +67,14 @@ Stop Longitude: {{stop.lon}}
 	    infowindow.open(map,marker);
 	  });
 	  
-	}
+	  
+	  
+
+	  
+	  
+	  
+	  
+	} //ends init
 	
 	google.maps.event.addDomListener(window, 'load', initialize);
 
