--- a/views/layout.html
+++ b/views/layout.html
@@ -8,15 +8,13 @@
     <meta name="author" content="michael mccarron (m.j.h.mccarron@gmail.com), enneagineering.com">
     <link rel="shortcut icon" href="/favicon.ico">
 
-    <title>busr: transit adaptor</title>
+    <title>busr: smart way finding</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="/bootstrap/css/navbar-fixed-top.css" rel="stylesheet">
-
-  
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -55,6 +53,8 @@
                 <li>Los Angeles</li>
               </ul>
             </li>
+			
+			 <li><a href="/contact">Contact</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="/map">Transit Map</a></li>
