transitProfiler class and TDD tests for class initial dev
added rspec tests for ruby classes in TP and validator for node.js forms

--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-<h2>Busr Transitor: Smart Way Finding for Transit</h2>
+<h2>Busr: Smart Way Finding for Transit</h2>
 <!-- 
 {{#each entries}}
 <p>
@@ -52,7 +52,7 @@ Published: {{published}}
         <div class="carousel-inner">
 			
 			<div class="active item">
-			    <img src="/images/wy.png" style="width: 640px; padding: 4px; float: left;" title="busr stops for route map">
+			    <img src="/images/wy.png" style="width: 100%; padding: 4px; float: left; text-align: center;" title="busr stops for route map">
 			</div>
 			
             <div class="item">
