--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,54 @@ Email Name: <input type="text" id="email" name="email"></input><br />
 <input type="hidden" name="mode" id="mode" value="contact" />
 
 Message (opt)
-<textarea name="message" id="message" col="30"></textarea>
-<input type="submit" ></input>
+<textarea name="message" id="message" col="30"></textarea><br />
+<input type="submit" id="submit" name="submit" ></input>
 
 </form>
+
+<script src="/js/validation.js" type="text/js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+<script>
+
+// Constructor
+function Validator() {
+  // always initialize all instance properties
+  
+}
+ 
+// class methods
+Validator.prototype.email = function(email) {
+
+    var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\
+".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA
+-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+    return re.test(email);	
+  
+}
+
+Validator.prototype.isEmpty = function(str) {
+	
+    return (!str || /^\s*$/.test(str));
+	
+   }
+	
+}
+
+Validator();
+
+
+var validation = new Validator();
+
+$( document ).ready(function() {
+    
+	$( "#submit" ).click(function() {
+	  var email = $('#email').val();
+	  alert( "email: "+email );
+	  return false;
+	});
+});
+
+
+
+</script>
