optimized bg image

--- a/views/about.html
+++ b/views/about.html
@@ -62,6 +62,7 @@ Universal Transit App competition:<br />
 	<li><a href="http://sumo-sim.org/">Simulation of Urban Mobility (SUMO)</a></li>
 	<li><a href="https://github.com/openplans/OpenTripPlanner/wiki">Open Trip Planner</a>
 	<li><a href="https://github.com/openxc/openxc-message-format">Accessing Vehicle Data</a></li>
+	<li><a href="http://www.inrix.com/publicsector.asp">Inrix</a></li>
 </ul>	
 
 <h3>Autonomous Automobiles</h3>
@@ -77,6 +78,8 @@ Universal Transit App competition:<br />
 <h3>General Transit Research</h3>
 <ul>
 	<li><a href="http://en.wikipedia.org/wiki/Automatic_vehicle_location">Automatic Vehicle Location</a></li>
+	
+	<li><a href="http://www.ite.org/meetings/2009TC/Session%2029_Robert%20Arnold.pdf">Real Time Data Exchange in Transport</a></li>
 	
 </ul>
 	
