redis agencies additions

--- a/views/agencies.html
+++ b/views/agencies.html
@@ -1,7 +1,7 @@
 
 
 <h3>Agencies</h3>
- {{! This comment will not be in the output }}
+ {{! create a helper to remove underscores from name in view }}
  
  Len: {{agencies.length}}
  <p>&nbsp;</p>
