agency detail contd

--- a/views/agency.html
+++ b/views/agency.html
@@ -1,4 +1,22 @@
-<h2>{{agent_info.agency_name}} </h2>
+
+
+ <p>&nbsp;</p>
+
+{{#each agent}}
+<h2>{{agency_name}} </h2>
+
+  {{agency_url}}<br/>
+  {{agency_timezone}}<br/>
+  {{agency_phone}}<br/>
+  {{agency_fare_url}}<br/>
+
+  
+{{/each}}
+
+
+
+
+
 
 
 <style type="text/css">
