working example of leaflet and OSM in route_stops.html

--- a/views/layout.html
+++ b/views/layout.html
@@ -10,6 +10,11 @@
 
     <title>busr: smart way finding</title>
 	
+	<!-- jQuery -->
+	<script src="/js/jquery-2.1.0.min.js"></script>
+	
+	
+	
 	<!-- leaflet mobile maps -->
 	<link rel="stylesheet" href="/css/leaflet.css" />
 	<script src="/js/leaflet.js"></script>
@@ -83,7 +88,7 @@
 	    <!-- Bootstrap core JavaScript
 	    ================================================== -->
 	    <!-- Placed at the end of the document so the pages load faster -->
-	    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+	   
 	    <script src="/bootstrap/js/bootstrap.min.js"></script>
 		
 	  </body>
