--- a/views/route_stops.html
+++ b/views/route_stops.html
@@ -1,95 +1,124 @@
-
+Your Location: <div id="latlng"></div>
     <div id='map' style='width:750px; height:280px;'></div>
         <script type="text/javascript">
+		
+		
+		var states = [{
+		    "type": "Feature",
+		    "properties": {"party": "Republican"},
+		    "geometry": {
+		        "type": "Polygon",
+		        "coordinates": [[
+		            [-104.05, 48.99],
+		            [-97.22,  48.98],
+		            [-96.58,  45.94],
+		            [-104.03, 45.94],
+		            [-104.05, 48.99]
+		        ]]
+		    }
+		}, {
+		    "type": "Feature",
+		    "properties": {"party": "Democrat"},
+		    "geometry": {
+		        "type": "Polygon",
+		        "coordinates": [[
+		            [-109.05, 41.00],
+		            [-102.06, 40.99],
+		            [-102.03, 36.99],
+		            [-109.04, 36.99],
+		            [-109.05, 41.00]
+		        ]]
+		    }
+		}];
 
-
-					
-				var map = L.map('map', {
-                   
-                });
+		
+		    var map = L.map('map', {});
 				
-				L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 				            attribution: '© <a href="http://openstreetmap.org">OpenStreetMap</a> contributors',
 				            maxZoom: 18
 				         }).addTo(map);
 				
-				
-				
-						 /*
-                L.control.layers({
-                    'Map': mapLayer,
-                    'Satellite': MQ.satelliteLayer(),
-                    'Hybrid': MQ.hybridLayer()
-                }).addTo(map);
-				*/
-						 
-				function onLocationFound(e) {
+	 
+			function onLocationFound(e) {
 					var radius = e.accuracy / 2;
 			        alert(e.latlng);
+					$("#latlng").text(e.latlng);
 					L.marker(e.latlng).addTo(map)
 						.bindPopup("You are within " + radius + " meters from this point").openPopup();
 
 					L.circle(e.latlng, radius).addTo(map);
 				}
 
-				function onLocationError(e) {
+			function onLocationError(e) {
 					alert(e.message);
 				}
+				
+				//basic geojson example
+				L.geoJson(states, {
+				    style: function(feature) {
+				        switch (feature.properties.party) {
+				            case 'Republican': return {color: "#ff0000"};
+				            case 'Democrat':   return {color: "#0000ff"};
+				        }
+				    }
+				}).addTo(map);
+				
+							
+				//coloring markers
+				var geojsonMarkerOptions = {
+				    radius: 8,
+				    fillColor: "#ff7800",
+				    color: "#000",
+				    weight: 1,
+				    opacity: 1,
+				    fillOpacity: 0.8
+				};
 	
-	
-	
-	
+				
+				//overlay pop up functionality
+				function onEachFeature(feature, layer) {
+				    // does this feature have a property named popupContent?
+				    if (feature.properties && feature.properties.popupContent) {
+				        layer.bindPopup(feature.properties.popupContent);
+				    }
+				}
 
-				map.on('locationfound', onLocationFound);
-				map.on('locationerror', onLocationError);
+				var geojsonFeature = {
+				    "type": "Feature",
+				    "properties": {
+				        "name": "Coors Field",
+				        "amenity": "Baseball Stadium",
+				        "popupContent": "This is where the Rockies play!"
+				    },
+				    "geometry": {
+				        "type": "Point",
+				        "coordinates": [-104.99404, 39.75621]
+				    }
+				};
+
+				L.geoJson(geojsonFeature, {
+
+							style: function (feature) {
+								return feature.properties && feature.properties.style;
+							},
+
+							onEachFeature: onEachFeature,
+
+							pointToLayer: function (feature, latlng) {
+								return L.circleMarker(latlng, geojsonMarkerOptions);
+							}
+						}).addTo(map);
 
 				
-				map.locate({setView: true, maxZoom: 16});
+				
+			map.on('locationfound', onLocationFound);
+			map.on('locationerror', onLocationError);
+			map.locate({setView: true, maxZoom: 16});
 				
        
 
         </script>
-
-
-<!-- 
-<div id="map" style="width: 600px; height: 400px"></div>
-
-
-<script>
-	var map = L.map('map');
-
-	L.tileLayer('http://{s}.tile.cloudmade.com/BC9A493B41014CAABB98F0471D759707/997/256/{z}/{x}/{y}.png', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>'
-	}).addTo(map);
-
-	function onLocationFound(e) {
-		var radius = e.accuracy / 2;
-        alert(e.latlng);
-		L.marker(e.latlng).addTo(map)
-			.bindPopup("You are within " + radius + " meters from this point").openPopup();
-
-		L.circle(e.latlng, radius).addTo(map);
-	}
-
-	function onLocationError(e) {
-		alert(e.message);
-	}
-	
-	
-	
-	
-
-	map.on('locationfound', onLocationFound);
-	map.on('locationerror', onLocationError);
-
-	map.locate({setView: true, maxZoom: 16});
-</script>
-
-
-
--->
-
 
 
 
